Updated environment variables

--- a/server/example.env
+++ b/server/example.env
@@ -1,9 +1,9 @@
 PORT=4000
 
 PGUSER=postgres
-PGPASSWORD=password
+PGPASSWORD=reinerj21
 PGHOST=localhost
 PGPORT=5432
 PGDATABASE=landmarks
 
-GROQ_API_KEY=groqiscool
+GROQ_API_KEY=<API_KEY>
